--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -2,3 +2,15 @@
 nav#navbar-main li.nav-item {
   font-size: 18px;
 }
+
+/* Make the tables scrollable horizontally.
+https://discourse.gohugo.io/t/responsive-tables-in-markdown/10639/8
+*/
+table {
+  display: block;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  /*margin: 0 auto;*/
+  overflow-x: auto;
+  white-space: nowrap;
+}
